--- a/UI/style.css
+++ b/UI/style.css
@@ -42,7 +42,8 @@
     background: #F6F6F6;
     box-shadow: .0rem .3rem .4rem rgba(0, 0, 0, 0.25);
     z-index: 1;
-
+    height: 10vh;
+    width: 100%;
 }
 
 .header > div:nth-child(1) {
@@ -58,10 +59,65 @@
     font-size: calc(var(--icon-font-size) * 1.5);
     line-height: 4.5rem;
     margin-left: 8%;
+    cursor: pointer;
 }
-
+.main-form{
+    display: flex;
+    flex-flow: column;
+    height: 100vh;
+}
 .header__logo img {
     width: 5rem;
+}
+.form{
+    display: none;
+    align-items: center;
+    justify-content: space-between;
+    flex-flow: column;
+    box-shadow: 0.1rem 0.1rem 1rem 1rem grey;
+    height: 60rem;
+    border-radius: 2px;
+    width: 40rem;
+    margin: 0 auto;
+    margin-top: 5rem;
+}
+.form__button{
+    width: 22.0rem;
+    height: 5.0rem;
+    background: var(--chat-color-orange);
+    color: #F6F6F6;
+    font-size: calc(var(--chat-text-font-size)*1.5);
+    margin-bottom: 10rem;
+}
+.form-header{
+    width: 40rem;
+    height: 10rem;
+    background: var(--chat-color-purple);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.form__logo img{
+    width: 5rem;
+}
+.form__logo{
+    width: 6.4rem;
+    height: 6.4rem;
+    border-radius: 4px;
+    background: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.form-input{
+    font-size: 2rem;
+    width: 35rem;
+    height: 5rem;
+    border: 1px var(--chat-color-purple) solid;
+    outline: none;
+    text-align: center;
+    border-radius: 4px;
+    color: var(--chat-color-purple);
 }
 
 
@@ -151,7 +207,12 @@
 
 .footer {
     grid-area: footer;
+    width: 100%;
     background: var(--chat-color-purple);
+    height: 11.1vh;
+    bottom:0;
+    position: absolute;
+    bottom: 0;
 }
 
 .users {
@@ -174,7 +235,7 @@
 .user-search {
     display: flex;
     align-items: center;
-    height: 4.5rem;
+    min-height: 4.5rem;
     margin-bottom: 5%;
 }
 
@@ -190,9 +251,8 @@
     margin-bottom: 10%;
     cursor: pointer;
 }
-.users-types span:nth-child(2){
+.users-active{
     border-bottom: 1px solid grey;
-
 }
 
 .user-search input {
@@ -259,7 +319,12 @@
     align-items: center;
     justify-content: center;
 }
-
+.chat-messages-button_hide{
+    display: none;
+}
+.message-input_disabled{
+    cursor: not-allowed;
+}
 .chat-messages-button img {
     width: 80%;
 }
