--- a/UI/style.css
+++ b/UI/style.css
@@ -314,7 +314,14 @@
     margin-left: var(--font-margin);
 }
 
-
+.error-page{
+    width: 100vw;
+    height: 100vh;
+    object-fit: cover;
+    position: absolute;
+    top: 0;
+    z-index: 1;
+}
 .messages {
     justify-content: space-between;
     display: flex;
@@ -660,8 +667,8 @@
 
 .notification-error {
     color: #f2230c;
-    border: 1px rgb(242, 78, 88, 0.3) inset;
-    background: rgb(242, 78, 88, 0.1);
+    border: 1px rgb(242, 78, 88,0.3) inset;
+    background: rgb(242, 78, 88,0.1);
 }
 
 .notification-error div i {
@@ -735,7 +742,7 @@
 }
 
 
-@media screen and (max-device-width: 768px) {
+@media (max-width: 800px) {
     :root {
         --chat-padding: 2%;
     }
@@ -745,6 +752,9 @@
         height: 100vh;
         grid-template-rows: 10% 69.5% 9.4% 11.1%;
         grid-template-columns: 20.8% 79.2%;
+    }
+    .header__title{
+        display: none;
     }
 
     .user-img {
@@ -762,14 +772,29 @@
     .messages {
         justify-content: normal;
     }
-
-}
-
-@media screen and (max-device-width: 375px) {
-    html {
-        font-size: 15px;
+    .chat-messages-button{
+        width: 6rem;
+        height: 6rem;
+    }
+    .messages-header__chat span{
+        font-size: 1rem;
     }
 
+}
+@media (max-width: 600px) {
+    .messages-header__chat span{
+        display: none;
+    }
+}
+@media (max-width: 470px) {
+    html {
+        font-size: 8px;
+    }
+
+    .chat-messages-button{
+        width: 10rem;
+        height: 10rem;
+    }
     .header {
         background: var(--chat-color-purple);
     }
@@ -892,7 +917,7 @@
         width: 50rem;
     }
 
-    .user__name {
+    .user_name {
         display: none;
     }
 
@@ -915,9 +940,9 @@
         top: 10%;
         transition: opacity 0.3s linear;
         background: white;
-        height: 460px;;
-        left: 20%;
-        width: 80%;
+        height: 240px;
+        left: 0%;
+        width: 52%;
     }
 
 
@@ -929,13 +954,17 @@
         opacity: 1;
         display: flex;
         flex-flow: column;
+        justify-content: space-around;
     }
-
+    #mobile-menu{
+        height: 5rem;
+        display: flex;
+        align-items: center;
+    }
 
     .filters-mobile_active {
         opacity: 1;
-        display: flex;
-        flex-flow: column;
+        display: block;
 
     }
 
@@ -1012,6 +1041,12 @@
 
     .messages-list div {
         font-size: 2rem;
+    }
+    .user-img{
+       margin-left: calc(var(--icon-height-weight-size)*2);
+    }
+    .form{
+        margin-top: 15rem;
     }
 }
 
